Added a frontend application
- The frontend app uses Remix, Vite, and Material UI. However, the dev server does not work. You can build and run the production server, though.
- Fixed build issues with the database package.
- Renamed the main app to backend and added Effect as a sample.
- Fixed database app build issues.

--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@repo/tsconfig/lib.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist"
   },
   "include": ["**/*", ".*"],
   "exclude": ["dist", "coverage"]
