--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/database": "*",
     "drizzle-orm": "0.32.0",
+    "effect": "3.5.4",
     "fastify": "4.28.1",
     "postgres": "3.4.4"
   },
