--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,10 +10,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.4",
-    "@emotion/server": "11.11.0",
-    "@emotion/styled": "11.11.5",
+    "@emotion/react": "11.12.0",
+    "@emotion/styled": "11.12.0",
     "@mui/icons-material": "5.16.4",
     "@mui/material": "5.16.4",
     "@remix-run/node": "2.10.3",
@@ -27,12 +25,11 @@
     "@remix-run/dev": "2.10.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.39",
+    "tailwindcss": "3.4.6",
     "typescript": "5.5.3",
     "vite": "5.3.4",
     "vite-tsconfig-paths": "4.3.2"
-  },
-  "overrides": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
   }
 }
