--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "main",
+  "name": "backend",
   "private": true,
-  "type": "module",
   "scripts": {
+    "build": "tsc",
     "ci": "run-p lint typecheck test:coverage build",
     "clean": "rm -rf build coverage",
     "dev": "NODE_ENV=development tsx watch --env-file=.env src/main.ts",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
+    "start": "NODE_ENV=production node ./build/main.js",
     "typecheck": "tsc -b"
   },
   "dependencies": {
