--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@repo/tsconfig/node.json",
-  "include": ["**/*", ".*"],
-  "exclude": ["**/build", "coverage"]
+  "include": ["src"],
+  "exclude": ["**/build", "coverage"],
+  "compilerOptions": {
+    "outDir": "build"
+  }
 }
