--- a/apps/backend/tsconfig.eslint.json
+++ b/apps/backend/tsconfig.eslint.json
@@ -1,8 +1,5 @@
 {
   "extends": "@repo/tsconfig/node.json",
   "include": ["**/*", ".*"],
-  "exclude": ["**/build", "coverage"],
-  "parserOptions": {
-    "project": "./tsconfig.eslint.json"
-  }
+  "exclude": ["**/build", "coverage"]
 }
