Dockerize all the things!
- Added a generic Dockerfile for all apps, except test-e2e because it is so different. I might consider splitting out test-api as well because it is different enough.
- Added docker-compose.yml to run everything locally, including database migrations and automated tests.
- Added graceful shutdown to the Fastify apps so they could process SIGTERMs correctly. I mainly added this early on because Docker Compose took 10 seconds to kill the apps. Now it's nearly instant 🙂

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "ci": "run-p lint typecheck test:coverage build",
@@ -16,6 +17,7 @@
     "drizzle-orm": "0.32.0",
     "effect": "3.5.4",
     "fastify": "4.28.1",
+    "fastify-graceful-shutdown": "4.0.1",
     "postgres": "3.4.4"
   },
   "devDependencies": {
