--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,19 +4,23 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "build": "npm run build:remix && npm run build:server",
+    "build:remix": "remix vite:build",
+    "build:server": "tsc --project ./tsconfig.server.json",
+    "dev": "tsx watch --clear-screen=false --enable-source-maps --ignore \".cache/**\" --ignore \"app/**\" --ignore \"vite.config.ts.timestamp-*\" --ignore \"build/**\" --ignore \"node_modules/**\" server/main.ts",
+    "start": "NODE_ENV=production node --enable-source-maps ./build/main.js",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@emotion/react": "11.12.0",
     "@emotion/styled": "11.12.0",
+    "@mcansh/remix-fastify": "3.3.3",
     "@mui/icons-material": "5.16.4",
     "@mui/material": "5.16.4",
     "@remix-run/node": "2.10.3",
     "@remix-run/react": "2.10.3",
     "@remix-run/serve": "2.10.3",
+    "fastify-graceful-shutdown": "4.0.1",
     "isbot": "5.1.13",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -26,6 +30,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "npm-run-all": "4.1.5",
     "postcss": "8.4.39",
     "tailwindcss": "3.4.6",
     "typescript": "5.5.3",
