Set the correct filter to exclude API tests when running unit tests

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:fix": "turbo run lint:fix",
     "format": "prettier --write .",
     "release": "changeset publish",
-    "test": "turbo run test --filter=!api-tests",
+    "test": "turbo run test --filter=!test-api",
     "update-dependencies": "npx npm-check-updates -u --root -ws",
     "update-package-lock": "rm -rf **/node_modules package-lock.json && npm install"
   },
