--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,28 +18,28 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Cache turbo artifacts
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-turbo-
-
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
 
-      - name: Restore cached node_modules
+      - name: 💿 Restore cached turbo artifacts
+        uses: actions/cache@v4
+        with:
+          path: '**/.turbo'
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+
+      - name: 💿 Restore cached node_modules
         uses: actions/cache@v4
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: npm install
 
-      - name: Build
+      - name: 🛠️ Build
         run: npm run ci
