--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@repo/eslint-config",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
   "files": [
     "README.md",
