--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,9 @@
       "dependsOn": ["^build"],
       "outputs": ["docs"]
     },
+    "docker:build": {
+      "cache": false
+    },
     "test": {
       "dependsOn": ["build"],
       "outputs": []
