--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,6 +8,7 @@
     "build:remix": "remix vite:build",
     "build:server": "tsc --project ./tsconfig.server.json",
     "dev": "tsx watch --clear-screen=false --enable-source-maps --ignore \".cache/**\" --ignore \"app/**\" --ignore \"vite.config.ts.timestamp-*\" --ignore \"build/**\" --ignore \"node_modules/**\" server/main.ts",
+    "docker:build": "cd ../.. && APP=frontend APP_TYPE=node .ci/build-app.sh",
     "start": "NODE_ENV=production node --enable-source-maps ./build/main.js",
     "typecheck": "tsc -b"
   },
