--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@repo/database",
   "version": "1.0.0",
+  "private": true,
   "module": "dist/index.mjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
