--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,12 +2,13 @@
   "name": "backend",
   "private": true,
   "type": "module",
+  "dockerfileType": "node",
   "scripts": {
     "build": "tsc",
     "ci": "run-p lint typecheck test:coverage build",
     "clean": "rm -rf build coverage",
     "dev": "NODE_ENV=development tsx watch --env-file=.env src/main.ts",
-    "docker:build": "cd ../.. && APP=backend APP_TYPE=node .ci/build-app.sh",
+    "docker:build": "cd ../.. && APP=backend APP_TYPE=node .github/docker/build-app.sh",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
     "start": "NODE_ENV=production node ./build/main.js",
