--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -121,7 +121,7 @@ jobs:
         with:
           context: .
           file: .github/docker/base.Dockerfile
-          tags: base-image:latest
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.NAMESPACE }}/base-image
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -131,7 +131,7 @@ jobs:
           context: .
           file: .github/docker/${{ steps.determine-dockerfile.outputs.dockerfile_type }}.Dockerfile
           build-args: |
-            BASE_IMAGE=base-image
+            BASE_IMAGE=${{ env.DOCKER_REGISTRY }}/${{ env.NAMESPACE }}/base-image
             APP=${{ matrix.app }}
             APP_ID=${{ env.APP_ID }}
             BUILD_SHA=${{ env.GITHUB_SHA }}
