--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,6 +90,8 @@ jobs:
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
 
       - name: Determine Dockerfile Type from package.json
         id: determine-dockerfile
@@ -120,9 +122,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          load: true
+          push: true
           file: .github/docker/base.Dockerfile
-          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.NAMESPACE }}/base-image
+          tags: localhost:5000/${{ env.NAMESPACE }}/base-image
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -132,7 +134,7 @@ jobs:
           context: .
           file: .github/docker/${{ steps.determine-dockerfile.outputs.dockerfile_type }}.Dockerfile
           build-args: |
-            BASE_IMAGE=${{ env.DOCKER_REGISTRY }}/${{ env.NAMESPACE }}/base-image
+            BASE_IMAGE=localhost:5000/${{ env.NAMESPACE }}/base-image
             APP=${{ matrix.app }}
             APP_ID=${{ env.APP_ID }}
             BUILD_SHA=${{ env.GITHUB_SHA }}
