--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,6 +48,7 @@ jobs:
         run: npx changeset publish
 
   detect-changes:
+    name: Detect changed apps
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     outputs:
@@ -76,6 +77,7 @@ jobs:
           echo "::set-output name=apps::${changed_apps}"
 
   docker-build:
+    name: Build docker images
     if: needs.detect-changes.outputs.changed_apps != '[]'
     runs-on: ubuntu-latest
     needs: detect-changes
@@ -87,6 +89,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
