--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,12 +90,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Setup Docker Buildx
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
         with:
-          driver: docker
+          driver-opts: network=host
 
-      - name: Determine Dockerfile Type from package.json
+      - name: Determine dockerfile type from package.json
         id: determine-dockerfile
         run: |
           # Read the dockerfileType from the app's package.json
@@ -110,7 +113,7 @@ jobs:
           
           echo "::set-output name=dockerfile_type::${dockerfile_type}"
 
-      - name: Set Build Arguments
+      - name: Set build arguments
         id: set-build-args
         run: |
           echo "APP_ID=$(basename `git rev-parse --show-toplevel`)-${{ matrix.app }}" >> $GITHUB_ENV
@@ -124,9 +127,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          load: true
+          push: true
           file: .github/docker/base.Dockerfile
-          tags: ${{ env.NAMESPACE }}/base-image
+          tags: localhost:5000/${{ env.NAMESPACE }}/base-image
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -136,7 +139,7 @@ jobs:
           context: .
           file: .github/docker/${{ steps.determine-dockerfile.outputs.dockerfile_type }}.Dockerfile
           build-args: |
-            BASE_IMAGE=${{ env.NAMESPACE }}/base-image
+            BASE_IMAGE=localhost:5000/${{ env.NAMESPACE }}/base-image
             APP=${{ matrix.app }}
             APP_ID=${{ env.APP_ID }}
             BUILD_SHA=${{ env.GITHUB_SHA }}
