--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,13 +74,18 @@ jobs:
         id: changed-apps
         run: |
           changed_apps=$(echo '${{ steps.changed-app-directories.outputs.all_changed_files }}' | jq -c '[.[] | sub("apps/"; "")]')
-          echo "::set-output name=apps::${changed_apps}"
+          echo "apps=${changed_apps}" >> $GITHUB_OUTPUT
 
   docker-build:
     name: Build docker images
     if: needs.detect-changes.outputs.changed_apps != '[]'
-    runs-on: ubuntu-latest
     needs: detect-changes
+    runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
     env:
       DOCKER_REGISTRY: docker.io # TODO: Update the registry
     strategy:
@@ -111,7 +116,7 @@ jobs:
             exit 1
           fi
           
-          echo "::set-output name=dockerfile_type::${dockerfile_type}"
+          echo "dockerfile_type=${dockerfile_type}" >> $GITHUB_OUTPUT
 
       - name: Set build arguments
         id: set-build-args
