Testing workflow to separate building the base image from the separate app jobs

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Check out code
         uses: actions/checkout@v4
         with:
           fetch-depth: 2
@@ -77,45 +77,15 @@ jobs:
           changed_apps=$(echo '${{ steps.changed-app-directories.outputs.all_changed_files }}' | jq -c '[.[] | sub("apps/"; "")]')
           echo "apps=${changed_apps}" >> $GITHUB_OUTPUT
 
-  docker-build-base:
-    name: Build base image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up docker buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set namespace
-        id: set-build-args
-        run: echo "NAMESPACE=$(basename `git rev-parse --show-toplevel`)" >> $GITHUB_ENV
-
-      - name: Build base image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: .github/docker/base.Dockerfile
-          tags: localhost:5000/${{ env.NAMESPACE }}/base-image
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          outputs: type=docker,dest=/tmp/base-image.tar
-
-      - name: Upload base image
-        uses: actions/upload-artifact@v4
-        with:
-          name: base-image
-          path: /tmp/base-image.tar
-
 # TODO: Due to how matrices work, the base image is rebuilt in each separate
 #       job. Build the base image in a previous job and load it in this job.
 #       See https://docs.docker.com/build/ci/github-actions/share-image-jobs/
+#       However, this other approach actually takes more time due to uploading,
+#       downloading, and pushing the image to the localhost registry.
   docker-build:
     name: Build docker images
     if: needs.detect-changes.outputs.changed_apps != '[]'
-    needs:
-      - detect-changes
-      - docker-build-base
+    needs: detect-changes
     runs-on: ubuntu-latest
     services:
       registry:
@@ -128,19 +98,13 @@ jobs:
       matrix:
         app: ${{ fromJson(needs.detect-changes.outputs.changed_apps) }}
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
         with:
           driver-opts: network=host
-
-      - name: Download base image
-        uses: actions/download-artifact@v4
-        with:
-          name: base-image
-          path: /tmp
 
       - name: Set build arguments
         id: set-build-args
@@ -151,11 +115,15 @@ jobs:
           echo "BUILD_DATE=$(date -u '+%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
           echo "NAMESPACE=$(basename `git rev-parse --show-toplevel`)" >> $GITHUB_ENV
 
-      - name: Load base image
-        run: |
-          docker load --input /tmp/base-image.tar
-          docker push localhost:5000/${{ env.NAMESPACE }}/base-image
-          docker image ls
+      - name: Build base image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: .github/docker/base.Dockerfile
+          tags: localhost:5000/${{ env.NAMESPACE }}/base-image
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Determine dockerfile type from package.json
         id: determine-dockerfile
@@ -177,9 +145,8 @@ jobs:
         with:
           context: .
           file: .github/docker/${{ steps.determine-dockerfile.outputs.dockerfile_type }}.Dockerfile
-          build-contexts: |
-            base-image=docker-image://localhost:5000/${{ env.NAMESPACE }}/base-image
           build-args: |
+            BASE_IMAGE=localhost:5000/${{ env.NAMESPACE }}/base-image
             APP=${{ matrix.app }}
             APP_ID=${{ env.APP_ID }}
             BUILD_SHA=${{ env.GITHUB_SHA }}
