--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,7 +47,8 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npx changeset publish
 
-# TODO: Detect changes in Dockerfiles to build all impacted apps
+# TODO: Detect changes in Dockerfiles to build all impacted apps. Are there
+#       other files we should also consider, such as this workflow?
   detect-changes:
     name: Detect changed apps
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -110,7 +111,7 @@ jobs:
         id: set-build-args
         run: |
           echo "APP_ID=$(basename `git rev-parse --show-toplevel`)-${{ matrix.app }}" >> $GITHUB_ENV
-          echo "BUILD_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
+          echo "BUILD_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
           echo "BUILD_BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
           echo "BUILD_DATE=$(date -u '+%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
           echo "NAMESPACE=$(basename `git rev-parse --show-toplevel`)" >> $GITHUB_ENV
