--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,9 +2,9 @@ name: Main
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: ['main']
   pull_request:
-    types: [ opened, synchronize ]
+    types: [opened, synchronize]
 
 jobs:
   build:
@@ -47,8 +47,8 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npx changeset publish
 
-# TODO: Detect changes in Dockerfiles to build all impacted apps. Are there
-#       other files we should also consider, such as this workflow?
+  # TODO: Detect changes in Dockerfiles to build all impacted apps. Are there
+  #       other files we should also consider, such as this workflow?
   detect-changes:
     name: Detect changed apps
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -78,15 +78,15 @@ jobs:
           changed_apps=$(echo '${{ steps.changed-app-directories.outputs.all_changed_files }}' | jq -c '[.[] | sub("apps/"; "")]')
           echo "apps=${changed_apps}" >> $GITHUB_OUTPUT
 
-# TODO: Due to how matrices work, the base image is rebuilt in each separate
-#       job. Build the base image in a previous job and load it in this job.
-#       See https://docs.docker.com/build/ci/github-actions/share-image-jobs/
-#       However, this other approach actually takes more time due to uploading,
-#       downloading, and pushing the image to the localhost registry.
+  # TODO: Due to how matrices work, the base image is rebuilt in each separate
+  #       job. Build the base image in a previous job and load it in this job.
+  #       See https://docs.docker.com/build/ci/github-actions/share-image-jobs/
+  #       However, this other approach actually takes more time due to uploading,
+  #       downloading, and pushing the image to the localhost registry.
 
-# Note: Builds are about 40 seconds faster without using the GitHub Actions
-# cache for the docker images. And about 2 minutes faster without building the
-# base image in a separate job to be shared across all apps.
+  # Note: Builds are about 40 seconds faster without using the GitHub Actions
+  # cache for the docker images. And about 2 minutes faster without building the
+  # base image in a separate job to be shared across all apps.
   docker-build:
     name: Build docker images
     if: needs.detect-changes.outputs.changed_apps != '[]'
@@ -135,16 +135,16 @@ jobs:
           # Read the dockerfileType from the app's package.json
           dockerfile_type=$(jq -r '.dockerfileType' apps/${{ matrix.app }}/package.json)
           echo "Dockerfile type for ${{ matrix.app }}: ${dockerfile_type}"
-          
+
           # Fail the step if dockerfileType is not found
           if [ -z "${dockerfile_type}" ] || [ "${dockerfile_type}" == "null" ]; then
             echo "Error: dockerfileType not found in package.json for ${{ matrix.app }}"
             exit 1
           fi
-          
+
           echo "dockerfile_type=${dockerfile_type}" >> $GITHUB_OUTPUT
 
-      - name: "Build app image: ${{ matrix.app }}"
+      - name: 'Build app image: ${{ matrix.app }}'
         uses: docker/build-push-action@v6
         with:
           context: .
