Update ESLint to v9
- This required a lot of changes and some configs/plugins still haven't updated yet, so will have to wait until they do (e.g. eslint-plugin-jsx-a11y).
- Removed airbnb configs in favor of using default recommended rules.
- Updated prettier config to use more of the defaults rather than deviating.
- Fixed an issue with the `update-package-lock` npm script where using `rm` didn't actually delete the files for some reason. Switched to `rimraf` and it works.
- Added more `tsconfig.eslint.json` files to packages/apps so files that shouldn't be part of the bundle don't get transpiled to the build/dist directory.
- Fixed issues with the Docker build where the full node_modules were not being pulled in. I wonder if there was a caching issue that masked the bug because apps should not have been able to run. We can either extract packages and publish them to npm or live with massive Docker images until Turbo fixes the issue. See https://github.com/vercel/turbo/issues/1100

--- a/apps/database/package.json
+++ b/apps/database/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf build",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "dev": "NODE_ENV=development tsx --env-file=.env src/main.ts",
     "docker:build": "cd ../.. && APP=database APP_TYPE=node .github/docker/build-app.sh",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
@@ -18,14 +19,14 @@
   "dependencies": {
     "@repo/database": "*",
     "drizzle-kit": "0.23.0",
-    "drizzle-orm": "0.32.0",
+    "drizzle-orm": "0.32.1",
     "postgres": "3.4.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/tsconfig": "*",
-    "@types/node": "20.14.10",
-    "eslint": "8.57.0",
-    "typescript": "5.5.3"
+    "@types/node": "20.14.12",
+    "eslint": "9.7.0",
+    "typescript": "5.5.4"
   }
 }
