--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,18 +11,22 @@
     "clean": "rm -rf build",
     "dev": "tsx watch --clear-screen=false --enable-source-maps --ignore \".cache/**\" --ignore \"app/**\" --ignore \"vite.config.ts.timestamp-*\" --ignore \"build/**\" --ignore \"node_modules/**\" server/main.ts",
     "docker:build": "cd ../.. && APP=frontend APP_TYPE=node .github/docker/build-app.sh",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint:fix": "npm run lint -- --fix",
     "start": "NODE_ENV=production node --enable-source-maps ./build/main.js",
     "typecheck": "tsc -b"
   },
   "dependencies": {
-    "@emotion/react": "11.12.0",
-    "@emotion/styled": "11.12.0",
+    "@emotion/cache": "11.13.1",
+    "@emotion/react": "11.13.0",
+    "@emotion/styled": "11.13.0",
     "@mcansh/remix-fastify": "3.3.3",
-    "@mui/icons-material": "5.16.4",
-    "@mui/material": "5.16.4",
+    "@mui/icons-material": "5.16.5",
+    "@mui/material": "5.16.5",
     "@remix-run/node": "2.10.3",
     "@remix-run/react": "2.10.3",
     "@remix-run/serve": "2.10.3",
+    "fastify": "4.28.1",
     "fastify-graceful-shutdown": "4.0.1",
     "isbot": "5.1.13",
     "react": "18.3.1",
@@ -30,14 +34,15 @@
   },
   "devDependencies": {
     "@remix-run/dev": "2.10.3",
+    "@repo/eslint-config-react": "*",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.39",
-    "tailwindcss": "3.4.6",
-    "typescript": "5.5.3",
-    "vite": "5.3.4",
+    "postcss": "8.4.40",
+    "tailwindcss": "3.4.7",
+    "typescript": "5.5.4",
+    "vite": "5.3.5",
     "vite-tsconfig-paths": "4.3.2"
   }
 }
