--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,34 +3,37 @@
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
+  "type": "module",
   "files": [
     "README.md",
     "rules",
-    "[!.]*.js"
+    "index.js",
+    "lib.js"
   ],
+  "exports": {
+    ".": "./index.js",
+    "./lib": "./lib.js"
+  },
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix"
   },
   "peerDependencies": {
-    "eslint": ">= 8.24 < 9"
+    "eslint": ">= 9 < 10"
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "1.10.3",
-    "@typescript-eslint/eslint-plugin": "7.16.1",
-    "@typescript-eslint/parser": "7.16.1",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "18.0.0",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jest": "28.6.0",
-    "eslint-plugin-jsdoc": "48.7.0",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-unused-imports": "3.2.0"
+    "@eslint/js": "9.7.0",
+    "eslint-plugin-import-x": "3.1.0",
+    "eslint-plugin-jsdoc": "48.8.3",
+    "eslint-plugin-unused-imports": "4.0.1",
+    "eslint-plugin-vitest": "0.5.4",
+    "globals": "15.8.0",
+    "typescript-eslint": "8.0.0-alpha.54"
   },
   "devDependencies": {
     "@repo/tsconfig": "*",
-    "eslint": "8.57.0"
+    "@types/eslint__js": "8.42.3",
+    "eslint": "9.7.0"
   }
 }
