Convert package to a module and fix the build

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/database",
   "version": "1.0.0",
   "private": true,
-  "module": "dist/index.mjs",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
