Update backend with a (mostly) production-ready server
- Added a production logger
- Added access logs
- Added meta version and health check routes
- Added graceful shutdown
- Added compression
- Added a custom error handler (copied from Fastify due to how they remove it when disabling default request logging)
- Consuming ESLint packages that were extracted
- Optimized Docker builds to remove nearly all dev dependencies (extracting the ESLint packages helped a lot with this, getting us down from 525MB to 192MB for the image size).
- Ignoring playwright reports for prettier

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,9 +48,12 @@ jobs:
         run: npx changeset publish
 
   # TODO: Detect changes in Dockerfiles to build all impacted apps. Are there
-  #       other files we should also consider, such as this workflow?
+  # other files we should also consider, such as this workflow?
   detect-changes:
     name: Detect changed apps
+    # TODO: Run on changes to pull requests for all changes between main and
+    # the current branch. This will ensure higher quality, especially if
+    # changes were made to the Docker builds.
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     outputs:
