--- a/apps/database/package.json
+++ b/apps/database/package.json
@@ -23,10 +23,10 @@
     "postgres": "3.4.4"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/tsconfig": "*",
-    "@types/node": "20.14.12",
-    "eslint": "9.7.0",
+    "@wesp-up/eslint-config": "2.0.0",
+    "@wesp-up/tsconfig": "2.0.0",
+    "@types/node": "22.0.0",
+    "eslint": "9.8.0",
     "typescript": "5.5.4"
   }
 }
