--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,32 +4,39 @@
   "type": "module",
   "dockerfileType": "node",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "ci": "run-p lint typecheck test:coverage build",
     "clean": "rm -rf build coverage",
     "dev": "NODE_ENV=development tsx watch --env-file=.env src/main.ts",
     "docker:build": "cd ../.. && APP=backend APP_TYPE=node .github/docker/build-app.sh",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "start": "NODE_ENV=production node ./build/main.js",
+    "start": "npm run build && NODE_ENV=production node ./build/main.js",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc -b"
   },
   "dependencies": {
+    "@fastify/compress": "7.0.3",
+    "@promster/fastify": "14.0.0",
+    "@promster/server": "14.0.0",
     "@repo/database": "*",
     "drizzle-orm": "0.32.1",
-    "effect": "3.5.8",
     "fastify": "4.28.1",
     "fastify-graceful-shutdown": "4.0.1",
-    "postgres": "3.4.4"
+    "fastify-plugin": "4.5.1",
+    "pino": "9.3.2",
+    "postgres": "3.4.4",
+    "prom-client": "15.1.3",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/tsconfig": "*",
-    "@types/node": "20.14.12",
+    "@types/node": "22.0.0",
+    "@types/uuid": "10.0.0",
     "@vitest/coverage-v8": "2.0.4",
-    "eslint": "9.7.0",
+    "@wesp-up/eslint-config": "2.0.0",
+    "@wesp-up/tsconfig": "2.0.0",
+    "eslint": "9.8.0",
     "pino-pretty": "11.2.2",
     "tsx": "4.16.2",
     "typescript": "5.5.4",
