--- a/apps/database/tsconfig.json
+++ b/apps/database/tsconfig.json
@@ -1,9 +1,8 @@
 {
-  "extends": "@repo/tsconfig/node.json",
+  "extends": "@wesp-up/tsconfig/node.json",
   "include": ["src"],
   "exclude": ["**/build", "coverage"],
   "compilerOptions": {
-    "outDir": "build",
-    "module": "ESNext"
+    "outDir": "build"
   }
 }
