--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -34,10 +34,12 @@
   },
   "devDependencies": {
     "@remix-run/dev": "2.10.3",
-    "@repo/eslint-config-react": "*",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@wesp-up/eslint-config": "2.0.0",
+    "@wesp-up/eslint-config-react": "2.0.0",
     "autoprefixer": "10.4.19",
+    "eslint": "9.8.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.40",
     "tailwindcss": "3.4.7",
