--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "npm": ">=10.7.0",
     "node": ">=20.15.1"
   },
-  "prettier": "@repo/prettier-config",
+  "prettier": "@wesp-up/prettier-config",
   "scripts": {
     "build": "turbo run build",
     "changeset": "changeset",
     "changeset:apply": "changeset version",
-    "ci": "turbo run lint typecheck test:coverage build",
+    "ci": "npm run format:check && turbo run lint typecheck test:coverage build",
     "clean": "rm -rf **/node_modules **/.turbo",
     "dev": "turbo run dev",
     "docker:build": "turbo run docker:build",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "release": "changeset publish",
     "test": "turbo run test --filter=!test-api --filter=!test-e2e",
     "update-dependencies": "npx npm-check-updates -u --root -ws",
-    "update-package-lock": "npx rimraf **/node_modules package-lock.json && npm install"
+    "update-package-lock": "npx rimraf --glob **/node_modules package-lock.json && npm install"
   },
   "devDependencies": {
     "@changesets/cli": "2.27.7",
-    "@repo/prettier-config": "*",
+    "@wesp-up/prettier-config": "1.0.0",
     "prettier": "3.3.3",
     "turbo": "2.0.9"
   }
