--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@repo/tsconfig/lib.json",
+  "extends": "@wesp-up/tsconfig/lib.json",
   "compilerOptions": {
     "outDir": "dist"
   },
